Correct files added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section id="main">
     <div id="double">
-      <h2>WASHINGTON WIZARDS</h2>
+      <h2>basketball</h2>
       <p>NBA Team based in D.C.</p>
       <p></p>
     </div>
